# Strategic-Infrastructure-Project-Finance-Engine

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/: model_framework.md  transaction_notes.md
examples/: run_project_finance.py
outputs/: sample_terminal_report.txt
src/: __init__.py  project_finance_engine.py
tests/: test_project_finance_engine.py
